# CelerisAi

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  celeris.html  genindex.html  imgui.ini  index.html  introduction.html  modules.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setrun_1D.py  setrun_web.py  usage.html
.doctrees/: celeris.doctree  environment.pickle  index.doctree  introduction.doctree  modules.doctree  usage.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/celeris/: domain.html  solver.html  utils.html
_sources/: introduction.rst.txt
celeris/: __init__.py  domain.py  runner.py  solver.py  utils.py
differentiability/assimilation/: setrun_1D_cda.py  setrun_1D_cda_prediction.py  setrun_1D_ida.py  setrun_1D_ida_prediction.py
differentiability/assimilation/scratch/: Obs_t.npy  Obs_topo1D.txt
docs/source/: index.rst  usage.rst
examples/1D/: ConstantTopo1D.txt
examples/Balboa/: config.json
